yeni eklemeler yapıldı

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img class="menu__acik" src="./assets/images/acik.svg" />
 
     <ul class="app__links">
-        <a href="/"></a><li>PORTFOLIO</li>
+        <a href="/"><li>PORTFOLIO</li></a>
         <a href="/"><li class="active">BLOG</li></a> 
         <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
         <a href="store.html"><li>STORE</li></a>
@@ -61,59 +61,45 @@
 
         <div class="app__listwrap">
             <div class="app_postcard">
-               <img class="postimage" src="./assets/images/ff (3).png" /> 
-                <strong class="postdate">NOV 23 2020</strong>
-                <h3 class="posttitle">This way is wrong about UI Design.</h3>
-                <p class="postinfo">
-                    A quick guide to assisting users in the challenging steps from learning 
-                    about your podcast on the web.  A quick guide to assisting users in the challenging steps from learning about your podcast on the web. 
-                </p>
-                <a class="postlink" href="/post_detail.html">READ MORE</a>
-            </div>
-            <div class="app_postcard">
-                <img class="postimage" src="./assets/images/ff (3).png" />
-                <strong class="postdate">NOV 23 2020</strong>
-                <h3 class="posttitle">This way is wrong about UI Design.</h3>
-                <p class="postinfo">9
-                    A quick guide to assisting users in the challenging steps from learning 
-                    about your podcast on the web.  A quick guide to assisting users in the challenging steps from learning about your podcast on the web. 
-                </p>
-                <a class="postlink" href="/post_detail.html">READ MORE</a>
-            </div>
-            <div class="app_postcard">
-               <img class="postimage" src="./assets/images/ff (3).png" />           
-                <strong class="postdate">NOV 23 2020</strong>
-                <h3 class="posttitle">This way is wrong about UI Design.</h3>
-                <p class="postinfo">
-                    A quick guide to assisting users in the challenging steps from learning 
-                    about your podcast on the web.  A quick guide to assisting users in the challenging steps from learning about your podcast on the web. 
-                </p>
-                <a class="postlink" href="/post_detail.html">READ MORE</a>
-            </div>
-            <div class="app_postcard">
                 <img class="postimage" src="./assets/images/ff (3).png" />            
-                <strong class="postdate">NOV 23 2020</strong>
-                <h3 class="posttitle">This way is wrong about UI Design.</h3>
+                <strong class="postdate">Mart 20 2022</strong>
+                <h3 class="posttitle">(Php-Html Programlama) Blog Sitesi ve Admin Panel Yapımı...</h3>
                 <p class="postinfo">
-                    A quick guide to assisting users in the challenging steps from learning 
-                    about your podcast on the web.  A quick guide to assisting users in the challenging steps from learning about your podcast on the web. 
+                   Bu projede php kullanarak dinamik olarak admin panel tarafından menü bar, sayfa, makale oluşturma, yayınlama ve database'e ekleme işlemleri yapar. Üye giriş ve kayıt bulunmaktadır...   
+                </p>
+                <a class="postlink" href="/post_detail.html">READ MORE</a>
+            </div>
+            <div class="app_postcard">
+                <img class="postimage" src="./assets/images/ff (3).png"" />
+                <strong class="postdate">Mayıs 05 2022</strong>
+                <h3 class="posttitle">(Python Programlama) Hava Durumuna Göre Masaüstü Arkaplan Değiştirme...</h3>
+                <p class="postinfo">
+                   Bu projede python kullanarak bir hava durumu apisi kullanarak o günki seçilen şehrin hava durumunu çekip ona göre seçilen resmi masaüstü arkaplan yapan python programı...
+                </p>
+                <a class="postlink" href="/post_detail.html">READ MORE</a>
+            </div>
+            <div class="app_postcard">
+               <img class="postimage" src="./assets/images/ff (3).png"" />           
+                <strong class="postdate">Temmuz 12 2022</strong>
+                <h3 class="posttitle">(Python Programlama) Telegram Bot Yapımı</h3>
+                <p class="postinfo">
+                    Telegram bot api kullanarak belirlenen komutlar ile bottan cevap alabilir, bota belirlenen komutları yazarak rasgele veya istenilen gifleri atabilir, para çevirme işlemlerini öğrenebilir vs gibi bir çok özelliği olan bir python programıdır.
                 </p>
                 <a class="postlink" href="/post_detail.html">READ MORE</a>
             </div>
             <div class="app_postcard">
                 <img class="postimage" src="./assets/images/ff (3).png" /> 
-                 <strong class="postdate">NOV 23 2020</strong>
-                 <h3 class="posttitle">This way is wrong about UI Design.</h3>
+                 <strong class="postdate">Haziran 27 2022</strong>
+                 <h3 class="posttitle">(Laravel) Laravel Framework'u Kullanarak E-Ticaret Sitesi Yapımı </h3>
                  <p class="postinfo">
-                     A quick guide to assisting users in the challenging steps from learning 
-                     about your podcast on the web.  A quick guide to assisting users in the challenging steps from learning about your podcast on the web. 
+                     Admin panelinden yöneticinin üyeler üzerinde işlemler yapması, kategoriler ve ürünler eklemesi ve detaylandırması, üyelerin ise üye olduktan sonra ürünleri sepete ekleme gibi işlemleri yapabildikleri bir e-ticaret sitesidir. 
                  </p>
                  <a class="postlink" href="/post_detail.html">READ MORE</a>
              </div>
              <div class="app_postcard">
                 <img class="postimage" src="./assets/images/ff (3).png" /> 
-                 <strong class="postdate">NOV 23 2020</strong>
-                 <h3 class="posttitle">This way is wrong about UI Design.</h3>
+                 <strong class="postdate">Kasım 02 2022</strong>
+                 <h3 class="posttitle">(Laravel) Laravel Framework'u Kullanarak </h3>
                  <p class="postinfo">
                      A quick guide to assisting users in the challenging steps from learning 
                      about your podcast on the web.  A quick guide to assisting users in the challenging steps from learning about your podcast on the web. 
