--- a/store.html
+++ b/store.html
@@ -27,9 +27,9 @@
         <a href="/"></a><li>PORTFOLIO</li>
         <a href="/"><li>BLOG</li></a> 
         <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
-        <a href="store.html"><li>STORE</li></a>
+        <a href="store.html"><li  class="active">STORE</li></a>
         <a href="hakkimda.html"><li>HAKKIMDA</li></a>
-        <a href="iletisim.html"><li class="active">İLETİŞİM</li></a>
+        <a href="iletisim.html"><li>İLETİŞİM</li></a>
     </ul>
     </nav>
     <main>
@@ -37,9 +37,6 @@
   
     </div>
     </main>
-
-
-
     <div class="footer-clean">
         <footer>
             <div class="container">
