sayfalar düzenlendi yenilikler yapıldı.

--- a/Pages/bloglaravel.html
+++ b/Pages/bloglaravel.html
@@ -8,20 +8,20 @@
     <title>Muhammet Ali Kayacan</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link href="./slider.css" rel="stylesheet"></link>
-    <link href="./style.css" rel="stylesheet"></link>
-    <link href="./post_detail.css" rel="stylesheet"></link>
+    <link href="../slider.css" rel="stylesheet"></link>
+    <link href="../style.css" rel="stylesheet"></link>
+    <link href="../post_detail.css" rel="stylesheet"></link>
 </head>
 <body>
     <nav class="app__header">
         <div class="app_logo">
-            <img class="app__title" src="./assets/images/_Kayacan Software-1.png" />
-            <img class="app__title2" src="./assets/images/ufakKS.png" />
+            <img class="app__title" src="../assets/images/_Kayacan Software-1.png" />
+            <img class="app__title2" src="../assets/images/ufakKS.png" />
             <a href="https://www.linkedin.com/in/muhammet-ali-kayacan-b35218202/" target="_blank"> 
-                <img class="purple__logo" src="./assets/images/hire_me.svg"/> </a>
+                <img class="purple__logo" src="../assets/images/hire_me.svg"/> </a>
         </a></div>
-        <img class="menu__kapali" src="./assets/images/kapalı.svg"/>
-        <img class="menu__acik" src="./assets/images/acik.svg" />
+        <img class="menu__kapali" src="../assets/images/kapalı.svg"/>
+        <img class="menu__acik" src="../assets/images/acik.svg" />
 
         <ul class="app__links">
             <a href="portfolio.html"><li>PORTFOLIO</li></a>
@@ -45,16 +45,16 @@
             </li>
             <li>
                 <div class="slider2">
-                    <img class="img active " src="./assets/images/1.png">
-                    <img class="img" src="./assets/images/2.png">
-                    <img class="img " src="./assets/images/ff.png">
-                    <img class="img " src="./assets/images/4.png">
-                    <img class="img " src="./assets/images/5.png">
-                    <img class="img " src="./assets/images/6.png">
-                    <img class="img " src="./assets/images/7.png">
-                    <img class="img " src="./assets/images/8.png">
-                    <img class="img " src="./assets/images/9.png">
-                    <img class="img " src="./assets/images/10.png">
+                    <img class="img active " src="../assets/images/1.png">
+                    <img class="img" src="../assets/images/2.png">
+                    <img class="img " src="../assets/images/ff.png">
+                    <img class="img " src="../assets/images/4.png">
+                    <img class="img " src="../assets/images/5.png">
+                    <img class="img " src="../assets/images/6.png">
+                    <img class="img " src="../assets/images/7.png">
+                    <img class="img " src="../assets/images/8.png">
+                    <img class="img " src="../assets/images/9.png">
+                    <img class="img " src="../assets/images/10.png">
                     <p class="ptag" id="output"></p>  
                 </div>
                 
@@ -69,13 +69,9 @@
           </ul>
         </nav>
       </div>
-    <h3>BLOG DETAILS H3</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore temporibus doloribus atque ex iusto eos laboriosam, voluptatibus rerum ad. Rerum cum reprehenderit ab quisquam! Quia in dignissimos adipisci voluptas quos voluptate nulla sapiente consequatur. Magni nostrum sunt recusandae reiciendis ea delectus sequi, voluptas maxime libero ipsum doloribus 
-        enim vitae placeat?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore temporibus doloribus atque ex iusto eos laboriosam, voluptatibus rerum ad. Rerum cum reprehenderit ab quisquam! Quia in dignissimos adipisci voluptas quos voluptate nulla sapiente consequatur. Magni nostrum sunt recusandae reiciendis ea delectus sequi, voluptas maxime libero ipsum doloribus 
-            enim vitae placeat?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore temporibus doloribus atque ex iusto eos laboriosam, voluptatibus rerum ad. Rerum cum reprehenderit ab quisquam! Quia in dignissimos adipisci voluptas quos voluptate nulla sapiente consequatur. Magni nostrum sunt recusandae reiciendis ea delectus sequi, voluptas maxime libero ipsum doloribus 
-                enim vitae placeat?</p>
+    <h3 style="margin-bottom:1.5rem; margin-top: 2.5rem; color: brown;">(Laravel) Laravel Framework'u Kullanarak Quiz Sitesi Yapımı</h3>
+    <p style="font-size: 18px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ipsa commodi, quo suscipit obcaecati odio iure, dolorem perspiciatis repellendus dolore quos necessitatibus consequuntur asperiores non voluptatum mollitia qui aut adipisci dignissimos ducimus! Minima pariatur rerum, fugiat explicabo in, mollitia optio, quaerat eos reprehenderit quidem voluptatem ab quisquam animi nulla! Suscipit totam inventore distinctio aut ipsa dolore nemo neque officia, amet ut blanditiis corporis cum, voluptates minus optio magni nulla voluptatem soluta sunt vel perferendis omnis! Quos accusantium esse architecto, repellendus omnis sequi asperiores quis animi, minima deleniti quaerat sit debitis inventore aspernatur? Repellat minus asperiores debitis neque dolore commodi dicta veritatis rerum earum necessitatibus fuga quasi, sint provident quidem illum similique laborum ducimus cupiditate ex magni esse aperiam adipisci. Nisi soluta saepe odio, obcaecati, perferendis odit fuga tenetur dicta rem in velit atque ipsa, optio quasi enim a est cum? Nostrum repudiandae voluptatem iusto soluta atque, cum natus reiciendis veritatis!</p>
+  
 </main>
 <div class="footer-clean">
     <footer>
@@ -114,8 +110,8 @@
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-<script src="./app.js" ></script>
-      <script src="./slider.js" ></script>
+<script src="../app.js" ></script>
+      <script src="../slider.js" ></script>
 
 </body>
 </html>
