--- a/Pages/pythontelegram.html
+++ b/Pages/pythontelegram.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,20 +9,20 @@
     <title>Muhammet Ali Kayacan</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link href="./slider.css" rel="stylesheet"></link>
-    <link href="./style.css" rel="stylesheet"></link>
-    <link href="./post_detail.css" rel="stylesheet"></link>
+    <link href="../slider.css" rel="stylesheet"></link>
+    <link href="../style.css" rel="stylesheet"></link>
+    <link href="../post_detail.css" rel="stylesheet"></link>
 </head>
 <body>
     <nav class="app__header">
         <div class="app_logo">
-            <img class="app__title" src="./assets/images/_Kayacan Software-1.png" />
-            <img class="app__title2" src="./assets/images/ufakKS.png" />
+            <img class="app__title" src="../assets/images/_Kayacan Software-1.png" />
+            <img class="app__title2" src="../assets/images/ufakKS.png" />
             <a href="https://www.linkedin.com/in/muhammet-ali-kayacan-b35218202/" target="_blank"> 
-                <img class="purple__logo" src="./assets/images/hire_me.svg"/> </a>
+                <img class="purple__logo" src="../assets/images/hire_me.svg"/> </a>
         </a></div>
-        <img class="menu__kapali" src="./assets/images/kapalı.svg"/>
-        <img class="menu__acik" src="./assets/images/acik.svg" />
+        <img class="menu__kapali" src="../assets/images/kapalı.svg"/>
+        <img class="menu__acik" src="../assets/images/acik.svg" />
 
         <ul class="app__links">
             <a href="portfolio.html"><li>PORTFOLIO</li></a>
@@ -33,7 +34,7 @@
     </nav>
 
 <main class="post_detailcontainer">
-    <div class="container2">
+    <div class="container2" style="max-width: 700px;">
         <nav class="slider2-nav">
           <ul>
             <li class="arrow2">
@@ -45,16 +46,12 @@
             </li>
             <li>
                 <div class="slider2">
-                    <img class="img active " src="./assets/images/1.png">
-                    <img class="img" src="./assets/images/2.png">
-                    <img class="img " src="./assets/images/ff.png">
-                    <img class="img " src="./assets/images/4.png">
-                    <img class="img " src="./assets/images/5.png">
-                    <img class="img " src="./assets/images/6.png">
-                    <img class="img " src="./assets/images/7.png">
-                    <img class="img " src="./assets/images/8.png">
-                    <img class="img " src="./assets/images/9.png">
-                    <img class="img " src="./assets/images/10.png">
+                    <img class="img active " src="../assets/images/telegram0.png">
+                    <img class="img  " src="../assets/images/telegram2.png">
+                    <img class="img " src="../assets/images/telegram3.png">
+                    <img class="img  " src="../assets/images/telegram4.png">
+                    <img class="img " src="../assets/images/telegram5.png">
+                    <img class="img  " src="../assets/images/telegram1.png">
                     <p class="ptag" id="output"></p>  
                 </div>
                 
@@ -69,13 +66,15 @@
           </ul>
         </nav>
       </div>
-    <h3>BLOG DETAILS H3</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore temporibus doloribus atque ex iusto eos laboriosam, voluptatibus rerum ad. Rerum cum reprehenderit ab quisquam! Quia in dignissimos adipisci voluptas quos voluptate nulla sapiente consequatur. Magni nostrum sunt recusandae reiciendis ea delectus sequi, voluptas maxime libero ipsum doloribus 
-        enim vitae placeat?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore temporibus doloribus atque ex iusto eos laboriosam, voluptatibus rerum ad. Rerum cum reprehenderit ab quisquam! Quia in dignissimos adipisci voluptas quos voluptate nulla sapiente consequatur. Magni nostrum sunt recusandae reiciendis ea delectus sequi, voluptas maxime libero ipsum doloribus 
-            enim vitae placeat?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore temporibus doloribus atque ex iusto eos laboriosam, voluptatibus rerum ad. Rerum cum reprehenderit ab quisquam! Quia in dignissimos adipisci voluptas quos voluptate nulla sapiente consequatur. Magni nostrum sunt recusandae reiciendis ea delectus sequi, voluptas maxime libero ipsum doloribus 
-                enim vitae placeat?</p>
+    <h3 style="margin-bottom:1.5rem; margin-top: 2.5rem; color: brown;">(Python Programlama) Telegram Bot Yapımı</h3>
+    <p style="font-size: 18px;">Öncelikle BotFather üzerinden belirtilen yolları izleyerek bir bot oluşturup python'da gerekli kütüphaneler eklenmelidir. BotFather'dan alınan
+        bot api key kullanıldıktan sonra dokumentasyon okunarak gerekli adımlar ile komutlar oluşturulabilir. Bu programda, belirlenen komutlara otamatik olarak 
+        cevap verebilir, örnek olarak grup telegram chatine eklendiğinde arkadaşlarınızın doğum günlerini otamatik olarak kutlatabilirsiniz, konuşmalar arasında 
+        istediğiniz gifleri atabilirsiniz. Gif'ler için bir api kullanılmıştır ve gelen gifler hem random şeklinde hemde kategori belirleyerek kullanılabilir.
+        Tl-USD-EUR çevirimleri yapabilir. NewsDataApi kullanarak belirlenen günlük haberleri istenilen bilgilere göre örnek olarak spor haberleri istersek /spor 
+        komutunu yazarak yabancı veya türk haber  sitelerinden rastgele haberleri getirir. Bir çok işleve sahip olan botu indirip kullanabilir veya kendinize göre geliştirebilirsiniz.
+        Github adresime giderek kodlarına erişebilir ve indirebilirsiniz. </p>
+  
 </main>
 <div class="footer-clean">
     <footer>
@@ -114,8 +113,8 @@
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-<script src="./app.js" ></script>
-      <script src="./slider.js" ></script>
+<script src="../app.js" ></script>
+      <script src="../slider.js" ></script>
 
 </body>
 </html>
