--- a/hakkimda.html
+++ b/hakkimda.html
@@ -24,10 +24,9 @@
         <img class="menu__acik" src="./assets/images/acik.svg" />
 
     <ul class="app__links">
-        <a href="/"></a><li>PORTFOLIO</li>
+        <a href="portfolio.html"><li>PORTFOLIO</li></a>
         <a href="/"><li>BLOG</li></a> 
         <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
-        <a href="store.html"><li>STORE</li></a>
         <a href="hakkimda.html"><li class="active">HAKKIMDA</li></a>
         <a href="iletisim.html"><li>İLETİŞİM</li></a>
     </ul>
