--- a/laravel.html
+++ b/laravel.html
@@ -22,10 +22,9 @@
         <img class="menu__acik" src="./assets/images/acik.svg" />
 
         <ul class="app__links">
-            <a href="/"></a><li>PORTFOLIO</li>
+            <a href="portfolio.html"><li>PORTFOLIO</li></a>
             <a href="/"><li class="active">BLOG</li></a> 
             <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
-            <a href="store.html"><li>STORE</li></a>
             <a href="hakkimda.html"><li>HAKKIMDA</li></a>
             <a href="iletisim.html"><li>İLETİŞİM</li></a>
         </ul>
@@ -59,34 +58,31 @@
 
         <div class="app__listwrap">
             <div class="app_postcard">
-               <img class="postimage" src="./assets/images/ff (3).png" /> 
-                <strong class="postdate">NOV 23 2020</strong>
-                <h3 class="posttitle">This way is wrong about UI Design.</h3>
+                <img class="postimage" src="./assets/images/laravel.png" /> 
+                 <strong class="postdate">Haziran 27 2022</strong>
+                 <h3 class="posttitle">(Laravel) Laravel Framework'u Kullanarak E-Ticaret Sitesi Yapımı </h3>
+                 <p class="postinfo">
+                     Admin panelinden yöneticinin üyeler üzerinde işlemler yapması, kategoriler ve ürünler eklemesi ve detaylandırması, üyelerin ise üye olduktan sonra ürünleri sepete ekleme gibi işlemleri yapabildikleri bir e-ticaret sitesidir. 
+                 </p>
+                 <a class="postlink" href="/Pages/laraveleticaret.html">DETAY</a>
+             </div>
+             <div class="app_postcard">
+                <img class="postimage" src="./assets/images/laravel.png" /> 
+                 <strong class="postdate">Kasım 02 2022</strong>
+                 <h3 class="posttitle">(Laravel) Laravel Framework'u Kullanarak Quiz Sitesi Yapımı </h3>
+                 <p class="postinfo">
+                    Admin panelinden yöneticinin üyeler üzerinde işlemler yapabildiği, sınavlar için CRUD işlemleri yapabildiği üyelerin sınavlara girebildiği ve puan, süre ve sıralama gibi değerlerini görebildiği bir Quiz sitesidir.
+                 </p>
+                 <a class="postlink" href="/Pages/bloglaravel.html">DETAY</a>
+             </div>
+             <div class="app_postcard">
+                <img class="postimage" src="./assets/images/laravel.png" />            
+                <strong class="postdate">Mart 20 2022</strong>
+                <h3 class="posttitle">(Laravel) Laravel Framework'u Kullanarak Blog Sitesi ve Admin Panel Yapımı...</h3>
                 <p class="postinfo">
-                    A quick guide to assisting users in the challenging steps from learning 
-                    about your podcast on the web.  A quick guide to assisting users in the challenging steps from learning about your podcast on the web. 
+                   Bu projede php kullanarak dinamik olarak admin panel tarafından menü bar, sayfa, makale oluşturma, yayınlama ve database'e ekleme işlemleri yapar. Üye giriş ve kayıt bulunmaktadır...   
                 </p>
-                <a class="postlink" href="/post_detail.html">READ MORE</a>
-            </div>
-            <div class="app_postcard">
-                <img class="postimage" src="./assets/images/ff (3).png" />
-                <strong class="postdate">NOV 23 2020</strong>
-                <h3 class="posttitle">This way is wrong about UI Design.</h3>
-                <p class="postinfo">9
-                    A quick guide to assisting users in the challenging steps from learning 
-                    about your podcast on the web.  A quick guide to assisting users in the challenging steps from learning about your podcast on the web. 
-                </p>
-                <a class="postlink" href="/post_detail.html">READ MORE</a>
-            </div>
-            <div class="app_postcard">
-               <img class="postimage" src="./assets/images/ff (3).png" />           
-                <strong class="postdate">NOV 23 2020</strong>
-                <h3 class="posttitle">This way is wrong about UI Design.</h3>
-                <p class="postinfo">
-                    A quick guide to assisting users in the challenging steps from learning 
-                    about your podcast on the web.  A quick guide to assisting users in the challenging steps from learning about your podcast on the web. 
-                </p>
-                <a class="postlink" href="/post_detail.html">READ MORE</a>
+                <a class="postlink" href="/Pages/bloghtmllaravel.html">DETAY</a>
             </div>
     </main>
    
