--- a/php.html
+++ b/php.html
@@ -22,10 +22,9 @@
         <img class="menu__acik" src="./assets/images/acik.svg" />
 
         <ul class="app__links">
-            <a href="/"></a><li>PORTFOLIO</li>
+            <a href="portfolio.html"><li>PORTFOLIO</li></a>
             <a href="/"><li class="active">BLOG</li></a> 
             <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
-            <a href="store.html"><li>STORE</li></a>
             <a href="hakkimda.html"><li>HAKKIMDA</li></a>
             <a href="iletisim.html"><li>İLETİŞİM</li></a>
         </ul>
@@ -59,15 +58,14 @@
 
         <div class="app__listwrap">
             <div class="app_postcard">
-               <img class="postimage" src="./assets/images/ff (3).png" /> 
-                <strong class="postdate">NOV 23 2020</strong>
-                <h3 class="posttitle">This way is wrong about UI Design.</h3>
-                <p class="postinfo">
-                    A quick guide to assisting users in the challenging steps from learning 
-                    about your podcast on the web.  A quick guide to assisting users in the challenging steps from learning about your podcast on the web. 
-                </p>
-                <a class="postlink" href="/post_detail.html">READ MORE</a>
-            </div>
+                <img class="postimage" src="./assets/images/php.png" /> 
+                 <strong class="postdate">Haziran 14 2021</strong>
+                 <h3 class="posttitle">(PHP-Html-Mysql) Php Kodlama ile Dinamik WebSite Yapımı</h3>
+                 <p class="postinfo">
+                     Bu projede notepad++ ile yazılan html ve php kodları oluşturulmuş bir sitedir. CRUD işlemleri, include ve login gibi işlemler içermektedir.
+                 </p>
+                 <a class="postlink" href="/Pages/Php-html-css.html">DETAY</a>
+             </div>
     </main>
 
     <div class="footer-clean">
