--- a/Pages/Php-html-css.html
+++ b/Pages/Php-html-css.html
@@ -4,42 +4,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Muhammet Ali Kayacan</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link href="./style.css" rel="stylesheet"></link>
-    <link href="./post_detail.css" rel="stylesheet"></link>
+    <link href="../slider.css" rel="stylesheet"></link>
+    <link href="../style.css" rel="stylesheet"></link>
+    <link href="../post_detail.css" rel="stylesheet"></link>
 </head>
 <body>
     <nav class="app__header">
         <div class="app_logo">
-            <img class="app__title" src="./assets/images/_Kayacan Software-1.png" />
-            <img class="app__title2" src="./assets/images/ufakKS.png" />
+            <img class="app__title" src="../assets/images/_Kayacan Software-1.png" />
+            <img class="app__title2" src="../assets/images/ufakKS.png" />
             <a href="https://www.linkedin.com/in/muhammet-ali-kayacan-b35218202/" target="_blank"> 
-                <img class="purple__logo" src="./assets/images/hire_me.svg"/> </a>
+                <img class="purple__logo" src="../assets/images/hire_me.svg"/> </a>
         </a></div>
-        <img class="menu__kapali" src="./assets/images/kapalı.svg"/>
-        <img class="menu__acik" src="./assets/images/acik.svg" />
+        <img class="menu__kapali" src="../assets/images/kapalı.svg"/>
+        <img class="menu__acik" src="../assets/images/acik.svg" />
 
         <ul class="app__links">
-            <a href="/"></a><li>PORTFOLIO</li>
+            <a href="portfolio.html"><li>PORTFOLIO</li></a>
             <a href="/"><li class="active">BLOG</li></a> 
             <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
-            <a href="store.html"><li>STORE</li></a>
             <a href="hakkimda.html"><li>HAKKIMDA</li></a>
             <a href="iletisim.html"><li>İLETİŞİM</li></a>
         </ul>
-
     </nav>
+
 <main class="post_detailcontainer">
-    <img class="post__detailimage" src="./assets/images/post1.svg">
-    <h3>BLOG DETAILS H3</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore temporibus doloribus atque ex iusto eos laboriosam, voluptatibus rerum ad. Rerum cum reprehenderit ab quisquam! Quia in dignissimos adipisci voluptas quos voluptate nulla sapiente consequatur. Magni nostrum sunt recusandae reiciendis ea delectus sequi, voluptas maxime libero ipsum doloribus 
-        enim vitae placeat?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore temporibus doloribus atque ex iusto eos laboriosam, voluptatibus rerum ad. Rerum cum reprehenderit ab quisquam! Quia in dignissimos adipisci voluptas quos voluptate nulla sapiente consequatur. Magni nostrum sunt recusandae reiciendis ea delectus sequi, voluptas maxime libero ipsum doloribus 
-            enim vitae placeat?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore temporibus doloribus atque ex iusto eos laboriosam, voluptatibus rerum ad. Rerum cum reprehenderit ab quisquam! Quia in dignissimos adipisci voluptas quos voluptate nulla sapiente consequatur. Magni nostrum sunt recusandae reiciendis ea delectus sequi, voluptas maxime libero ipsum doloribus 
-                enim vitae placeat?</p>
+    <div class="container2">
+        <nav class="slider2-nav">
+          <ul>
+            <li class="arrow2">
+              <button class="previous">
+                <span>
+                  <i class="arrow left"></i>
+                </span>
+              </button>
+            </li>
+            <li>
+                <div class="slider2">
+                    <img class="img active " src="../assets/images/sunucu1.png">
+                    <img class="img" src="../assets/images/sunucu2.png">
+                    <img class="img " src="../assets/images/sunucu3.png">
+                    <img class="img " src="../assets/images/sunucu4.png">
+                    <img class="img " src="../assets/images/sunucu5.png">
+                    <p class="ptag" id="output"></p>  
+                </div>
+                
+            </li> 
+            <li class="arrow3">
+              <button class="next">
+                <span>
+                  <i class="arrow right"></i>
+                </span>
+              </button>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    <h3 style="margin-bottom:1.5rem; margin-top: 2.5rem; color: brown;">(PHP-Html-Mysql) Php (notepad++ üzerinden) Kodlama ile Dinamik WebSite Yapımı</h3>
+    <p style="font-size: 18px;">Bu projede notepad++ ile yazılan html ve php kodları oluşturulmuş bir sitedir. CRUD işlemleri, include ve login gibi işlemler içermektedir. Bağlan.php ile database' e bağlandıktan sonra
+        gerekli sayfaları include yaparak dinamik olarak sayfa içeriği, menüler, üyeler gibi bir çok işlem yapılabilir. Github adresime giderek kodlarına erişebilir ve indirebilirsiniz.</p>
+  
 </main>
 <div class="footer-clean">
     <footer>
@@ -78,6 +106,8 @@
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-<script src="./app.js" ></script>
+<script src="../app.js" ></script>
+      <script src="../slider.js" ></script>
+
 </body>
 </html>
