--- a/htmlcss.html
+++ b/htmlcss.html
@@ -22,10 +22,9 @@
         <img class="menu__acik" src="./assets/images/acik.svg" />
 
         <ul class="app__links">
-            <a href="/"></a><li>PORTFOLIO</li>
+            <a href="portfolio.html"><li>PORTFOLIO</li></a>
             <a href="/"><li class="active">BLOG</li></a> 
             <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
-            <a href="store.html"><li>STORE</li></a>
             <a href="hakkimda.html"><li>HAKKIMDA</li></a>
             <a href="iletisim.html"><li>İLETİŞİM</li></a>
         </ul>
@@ -59,35 +58,15 @@
 
         <div class="app__listwrap">
             <div class="app_postcard">
-               <img class="postimage" src="./assets/images/ff (3).png" /> 
-                <strong class="postdate">NOV 23 2020</strong>
-                <h3 class="posttitle">This way is wrong about UI Design.</h3>
-                <p class="postinfo">
-                    A quick guide to assisting users in the challenging steps from learning 
-                    about your podcast on the web.  A quick guide to assisting users in the challenging steps from learning about your podcast on the web. 
-                </p>
-                <a class="postlink" href="/post_detail.html">READ MORE</a>
-            </div>
-            <div class="app_postcard">
-                <img class="postimage" src="./assets/images/ff (3).png" />
-                <strong class="postdate">NOV 23 2020</strong>
-                <h3 class="posttitle">This way is wrong about UI Design.</h3>
-                <p class="postinfo">9
-                    A quick guide to assisting users in the challenging steps from learning 
-                    about your podcast on the web.  A quick guide to assisting users in the challenging steps from learning about your podcast on the web. 
-                </p>
-                <a class="postlink" href="/post_detail.html">READ MORE</a>
-            </div>
-            <div class="app_postcard">
-               <img class="postimage" src="./assets/images/ff (3).png" />           
-                <strong class="postdate">NOV 23 2020</strong>
-                <h3 class="posttitle">This way is wrong about UI Design.</h3>
-                <p class="postinfo">
-                    A quick guide to assisting users in the challenging steps from learning 
-                    about your podcast on the web.  A quick guide to assisting users in the challenging steps from learning about your podcast on the web. 
-                </p>
-                <a class="postlink" href="/post_detail.html">READ MORE</a>
-            </div>
+                <img class="postimage" src="./assets/images/html.png" /> 
+                 <strong class="postdate">02 01 2023</strong>
+                 <h3 class="posttitle">(Html-Css-JavaScript) Proje Tanıtım Web Sitesi </h3>
+                 <p class="postinfo">
+                    Projelerimi ve kendimi tanıttığım halihazırda yayında olan sitedir. 
+                 </p>
+                 <a class="postlink" href="/Pages/html-Css.html">DETAY</a>
+             </div>
+        </div>
     </main>
     
     <div class="footer-clean">
