--- a/portfolio.html
+++ b/portfolio.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link href="./style.css" rel="stylesheet"></link>
-    <link href="./pages.css" rel="stylesheet"></link>
     <link href="./post_detail.css" rel="stylesheet"></link>
+    <link href="./pages.css" rel="stylesheet"></link>
 </head>
 <body>
     <nav class="app__header">
@@ -24,19 +24,19 @@
         <img class="menu__acik" src="./assets/images/acik.svg" />
 
     <ul class="app__links">
-        <a href="/"></a><li>PORTFOLIO</li>
+        <a href="portfolio.html"><li class="active">PORTFOLIO</li></a>
         <a href="/"><li>BLOG</li></a> 
         <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
-        <a href="store.html"><li  class="active">STORE</li></a>
         <a href="hakkimda.html"><li>HAKKIMDA</li></a>
         <a href="iletisim.html"><li>İLETİŞİM</li></a>
     </ul>
     </nav>
     <main>
-    <div class="containerr">
-  
+    <div>
+        bildiğim şeyleri yazıcağım yer mongodb vs gibi belkide örnekler
     </div>
-    </main>
+</main>
+
     <div class="footer-clean">
         <footer>
             <div class="container">
@@ -72,7 +72,7 @@
             </div>
         </footer>
     </div>
-    
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
     <script src="./app.js" ></script>
