--- a/python.html
+++ b/python.html
@@ -22,10 +22,9 @@
         <img class="menu__acik" src="./assets/images/acik.svg" />
 
         <ul class="app__links">
-            <a href="/"></a><li>PORTFOLIO</li>
+            <a href="portfolio.html"><li>PORTFOLIO</li></a>
             <a href="/"><li class="active">BLOG</li></a> 
             <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
-            <a href="store.html"><li>STORE</li></a>
             <a href="hakkimda.html"><li>HAKKIMDA</li></a>
             <a href="iletisim.html"><li>İLETİŞİM</li></a>
         </ul>
@@ -58,15 +57,23 @@
 
         <div class="app__listwrap">
             <div class="app_postcard">
-               <img class="postimage" src="./assets/images/ff (3).png" /> 
-                <strong class="postdate">NOV 23 2020</strong>
-                <h3 class="posttitle">This way is wrong about UI Design.</h3>
+                <img class="postimage" src="./assets/images/Python.png" />
+                <strong class="postdate">Mayıs 05 2022</strong>
+                <h3 class="posttitle">(Python Programlama) Hava Durumuna Göre Masaüstü Arkaplan Değiştirme...</h3>
                 <p class="postinfo">
-                    A quick guide to assisting users in the challenging steps from learning 
-                    about your podcast on the web.  A quick guide to assisting users in the challenging steps from learning about your podcast on the web. 
+                   Bu projede python kullanarak bir hava durumu apisi kullanarak o günki seçilen şehrin hava durumunu çekip ona göre seçilen resmi masaüstü arkaplan yapan python programı...
                 </p>
-                <a class="postlink" href="/post_detail.html">READ MORE</a>
+                <a class="postlink" href="/Pages/pythonweather.html">DETAY</a>
             </div>
+            <div class="app_postcard">
+                <img class="postimage" src="./assets/images/Python.png" />           
+                 <strong class="postdate">Temmuz 12 2022</strong>
+                 <h3 class="posttitle">(Python Programlama) Telegram Bot Yapımı</h3>
+                 <p class="postinfo">
+                     Telegram bot api kullanarak belirlenen komutlar ile bottan cevap alabilir, bota belirlenen komutları yazarak rasgele veya istenilen gifleri atabilir, para çevirme işlemlerini öğrenebilir vs gibi bir çok özelliği olan bir python programıdır.
+                 </p>
+                 <a class="postlink" href="/Pages/pythontelegram.html">DETAY</a>
+             </div>
     </main>
     
     <div class="footer-clean">
