--- a/Pages/Php-html-css.html
+++ b/Pages/Php-html-css.html
@@ -11,6 +11,7 @@
     <link href="../slider.css" rel="stylesheet"></link>
     <link href="../style.css" rel="stylesheet"></link>
     <link href="../post_detail.css" rel="stylesheet"></link>
+    <link href="../link.css" rel="stylesheet"></link>
 </head>
 <body>
     <nav class="app__header">
@@ -24,11 +25,10 @@
         <img class="menu__acik" src="../assets/images/acik.svg" />
 
         <ul class="app__links">
-            <a href="portfolio.html"><li>PORTFOLIO</li></a>
-            <a href="/"><li class="active">BLOG</li></a> 
+            <a href="/"><li class="active">PORTFÖY</li></a> 
             <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
-            <a href="hakkimda.html"><li>HAKKIMDA</li></a>
-            <a href="iletisim.html"><li>İLETİŞİM</li></a>
+            <a href="../hakkimda.html"><li>HAKKIMDA</li></a>
+            <a href="../iletisim.html"><li>İLETİŞİM</li></a>
         </ul>
     </nav>
 
@@ -66,8 +66,11 @@
       </div>
     <h3 style="margin-bottom:1.5rem; margin-top: 2.5rem; color: brown;">(PHP-Html-Mysql) Php (notepad++ üzerinden) Kodlama ile Dinamik WebSite Yapımı</h3>
     <p style="font-size: 18px;">Bu projede notepad++ ile yazılan html ve php kodları oluşturulmuş bir sitedir. CRUD işlemleri, include ve login gibi işlemler içermektedir. Bağlan.php ile database' e bağlandıktan sonra
-        gerekli sayfaları include yaparak dinamik olarak sayfa içeriği, menüler, üyeler gibi bir çok işlem yapılabilir. Github adresime giderek kodlarına erişebilir ve indirebilirsiniz.</p>
-  
+        gerekli sayfaları include yaparak dinamik olarak sayfa içeriği, menüler, üyeler gibi bir çok işlem yapılabilir. Projenin tamamı (db ile birlikte) github adresimde bulunmaktadır. Github adresime giderek kodlarına erişebilir ve indirebilirsiniz.</p>
+        <br>
+        <div class="wrapper">
+            <h5>Github <a href="https://github.com/Muhammet15/phpproject" target="_blank" id="style-2" data-replace="Proje link"><span> Proje link</span></a></h5>
+        </div>
 </main>
 <div class="footer-clean">
     <footer>
