--- a/Pages/pythontelegram.html
+++ b/Pages/pythontelegram.html
@@ -12,6 +12,7 @@
     <link href="../slider.css" rel="stylesheet"></link>
     <link href="../style.css" rel="stylesheet"></link>
     <link href="../post_detail.css" rel="stylesheet"></link>
+    <link href="../link.css" rel="stylesheet"></link>
 </head>
 <body>
     <nav class="app__header">
@@ -25,11 +26,10 @@
         <img class="menu__acik" src="../assets/images/acik.svg" />
 
         <ul class="app__links">
-            <a href="portfolio.html"><li>PORTFOLIO</li></a>
-            <a href="/"><li class="active">BLOG</li></a> 
+            <a href="/"><li class="active">PORTFÖY</li></a> 
             <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
-            <a href="hakkimda.html"><li>HAKKIMDA</li></a>
-            <a href="iletisim.html"><li>İLETİŞİM</li></a>
+            <a href="../hakkimda.html"><li>HAKKIMDA</li></a>
+            <a href="../iletisim.html"><li>İLETİŞİM</li></a>
         </ul>
     </nav>
 
@@ -68,12 +68,19 @@
       </div>
     <h3 style="margin-bottom:1.5rem; margin-top: 2.5rem; color: brown;">(Python Programlama) Telegram Bot Yapımı</h3>
     <p style="font-size: 18px;">Öncelikle BotFather üzerinden belirtilen yolları izleyerek bir bot oluşturup python'da gerekli kütüphaneler eklenmelidir. BotFather'dan alınan
-        bot api key kullanıldıktan sonra dokumentasyon okunarak gerekli adımlar ile komutlar oluşturulabilir. Bu programda, belirlenen komutlara otamatik olarak 
+        bot api key kullanıldıktan sonra dokumentasyon okunarak gerekli adımlar ile komutlar oluşturulabilir. <br><br>
+        Bu programda, belirlenen komutlara otamatik olarak 
         cevap verebilir, örnek olarak grup telegram chatine eklendiğinde arkadaşlarınızın doğum günlerini otamatik olarak kutlatabilirsiniz, konuşmalar arasında 
         istediğiniz gifleri atabilirsiniz. Gif'ler için bir api kullanılmıştır ve gelen gifler hem random şeklinde hemde kategori belirleyerek kullanılabilir.
-        Tl-USD-EUR çevirimleri yapabilir. NewsDataApi kullanarak belirlenen günlük haberleri istenilen bilgilere göre örnek olarak spor haberleri istersek /spor 
+        Tl-USD-EUR çevirimleri yapabilir. <br><br>
+        NewsDataApi kullanarak belirlenen günlük haberleri istenilen bilgilere göre örnek olarak spor haberleri istersek /spor 
         komutunu yazarak yabancı veya türk haber  sitelerinden rastgele haberleri getirir. Bir çok işleve sahip olan botu indirip kullanabilir veya kendinize göre geliştirebilirsiniz.
-        Github adresime giderek kodlarına erişebilir ve indirebilirsiniz. </p>
+        Eğer istenilirse çekilen haberler bir database' de tutulabilir belirlenen günden itibaren eskiyen haberler silinir.
+        <br><br> Github adresime giderek kodlarına erişebilir ve indirebilirsiniz. </p>
+        <br>
+        <div class="wrapper">
+            <h5>Github <a href="https://github.com/Muhammet15/Python-Telegram-Bot" target="_blank" id="style-2" data-replace="Proje link"><span> Proje link</span></a></h5>
+        </div>
   
 </main>
 <div class="footer-clean">
