--- a/Pages/pythonweather.html
+++ b/Pages/pythonweather.html
@@ -11,6 +11,7 @@
     <link href="../slider.css" rel="stylesheet"></link>
     <link href="../style.css" rel="stylesheet"></link>
     <link href="../post_detail.css" rel="stylesheet"></link>
+    <link href="../link.css" rel="stylesheet"></link>
 </head>
 <body>
     <nav class="app__header">
@@ -24,11 +25,10 @@
         <img class="menu__acik" src="../assets/images/acik.svg" />
 
         <ul class="app__links">
-            <a href="portfolio.html"><li>PORTFOLIO</li></a>
-            <a href="/"><li class="active">BLOG</li></a> 
+            <a href="/"><li class="active">PORTFÖY</li></a> 
             <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
-            <a href="hakkimda.html"><li>HAKKIMDA</li></a>
-            <a href="iletisim.html"><li>İLETİŞİM</li></a>
+            <a href="../hakkimda.html"><li>HAKKIMDA</li></a>
+            <a href="../iletisim.html"><li>İLETİŞİM</li></a>
         </ul>
     </nav>
 
@@ -63,9 +63,11 @@
     <h3 style="margin-bottom:1.5rem; margin-top: 2.5rem; color: brown;">(Python Programlama) Hava Durumuna Göre Masaüstü Arkaplan Değiştirme</h3>
     <p style="font-size: 18px;"> Hava durumu apisi ile bir json verisi alınıp gerekli bilgiler oradan çekildikten sonra o günki seçilen şehrin hava durumunu çekerek 
         ona göre seçilen resmi masaüstü arkaplan yaparak belirlenen belli süreler içerisinde tekrar yeniden çalışır. Bunu exe dosyası haline getirerek bir program haline getirebilirsiniz
-        Github adresime giderek kodlarına erişebilir ve indirebilirsiniz.
+        Github adresime giderek kodlarına erişebilir ve indirebilirsiniz.<br><br>
         </p>
-  
+        <div class="wrapper">
+            <h5>Github <a href="https://github.com/Muhammet15/ChangewheatherApi" target="_blank" id="style-2" data-replace="Proje link"><span> Proje link</span></a></h5>
+        </div>
 </main>
 <div class="footer-clean">
     <footer>
