--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
         <img class="menu__acik" src="./assets/images/acik.svg" />
 
     <ul class="app__links">
-        <a href="portfolio.html"><li>PORTFOLIO</li></a>
-        <a href="/"><li class="active">BLOG</li></a> 
+        <a href="/"><li class="active">PORTFÖY</li></a> 
         <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
         <a href="hakkimda.html"><li>HAKKIMDA</li></a>
         <a href="iletisim.html"><li>İLETİŞİM</li></a>
@@ -34,9 +33,9 @@
     <main>
         <div class="app__showcase">
             <div class="app__showcase-info">
-                <h1>Blog</h1>
-                <h3 class="text">Bu blog...</h3>
-                <p> Merhaba ben Muhammet Ali Kayacan. Bilgisayar Mühendisiyim. Her zaman kendisini geliştirmeye dayalı biri olmanın vermiş olduğu istekle kendime bir web sitesi yaparak diğer 
+                <h1>Merhaba</h1>
+                <h3 class="text">Ben...</h3>
+                <p> Muhammet Ali Kayacan. Bilgisayar Mühendisiyim. Her zaman kendisini geliştirmeye dayalı biri olmanın vermiş olduğu istekle kendime bir web sitesi yaparak diğer 
                     yapmış olduğum projeleri burada tanıtmak istedim. Yaptığım bazı projeler incelemeniz için link halinde verilmiştir. Daha çok php backend ile uğraştığım için 
                     projelerimin çoğu öncelikle php dilinde olmakla beraber python ile de yapılmış bir kaç ufak programın detayı yayınlanmıştır. Github üzerinden projelere ulaşabilirsiniz. 
                     Herhangi bir soru için mail üzerinden veya aşağıdaki kanallardan iletişim kurabilirsiniz. Gezintinizin keyfini çıkarın.
